# IC

./: .gitignore  .gitmodules
proj1/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  a.txt  audioProcessor  audioprocessor  audioprocessor.cpp  audioprocessor.out  audioprocessor.sh  cmake_install.cmake  ex1.cpp  ex1.out  imageProcessor  imageprocessor.cpp  requirements.txt  textProcessor  textprocessor  textprocessor.cpp  textprocessor.out
proj1/imageprocessor_files/: blurredImage3.ppm
proj1/imageprocessor_files/results/: blurredImage7.ppm  diffImage.ppm  grayMat.ppm  quantizedImage.ppm
proj1/opencv_build/: CMakeCache.txt  CMakeDownloadLog.txt  CMakeVars.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  OpenCVConfig.cmake  OpenCVModules.cmake  cmake_install.cmake  cmake_uninstall.cmake  opencv_data_config.hpp  opencv_python_config.cmake
proj1/opencv_build/apps/: CTestTestfile.cmake  Makefile  cmake_install.cmake
proj1/opencv_build/apps/annotation/: CTestTestfile.cmake  Makefile  cmake_install.cmake
proj1/opencv_build/apps/interactive-calibration/: CTestTestfile.cmake  Makefile  cmake_install.cmake
proj1/opencv_build/data/: CTestTestfile.cmake  Makefile
proj1/opencv_build/doc/: CTestTestfile.cmake  Doxyfile  DoxygenLayout.xml  Makefile  cmake_install.cmake  root.markdown
proj1/opencv_build/include/: CTestTestfile.cmake  Makefile
proj1/textprocessor_files/nl/: ep-00-02-03.txt  ep-00-05-15.txt  ep-07-03-13-012.txt  ep-07-10-24-008-19.txt  ep-07-11-13-009.txt  ep-07-11-13-023.txt
proj2/: .gitignore  demo.cpp  (+17 more)
(+7905 files in other folders)
